[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/rocket_sprite.gd" id="1"]
[ext_resource type="Texture2D" path="res://assets/rocket.svg" id="2"]
[ext_resource type="Script" path="res://scripts/particle_effects.gd" id="3"]

[node name="RocketSprite" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1")

[node name="RocketImage" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -32.0
offset_top = -64.0
offset_right = 32.0
offset_bottom = 64.0
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[node name="ExplosionLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 64
text = "ðŸ’¥"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ParticleEffects" type="Node2D" parent="."]
script = ExtResource("3")
